[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/campaign/CampaignRoot.gd" id="1"]
[ext_resource type="Script" path="res://scripts/campaign/EnergyHeatOverlay.gd" id="2"]
[ext_resource type="PackedScene" path="res://ui/LoadoutPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://ui/WaveUI.tscn" id="4"]

[node name="CampaignRoot" type="Node2D"]
script = ExtResource("1")

[node name="MapContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="TowerContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="MobContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnergyHeatOverlay" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LoadoutPanel" parent="UILayer" instance=ExtResource("3")]
unique_name_in_owner = true

[node name="WaveUI" parent="UILayer" instance=ExtResource("4")]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0

[node name="LevelProgressBar" type="ProgressBar" parent="UILayer"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 130.0
offset_right = 300.0
offset_bottom = 154.0
value = 1.0

[node name="DebugOverlay" type="Label" parent="UILayer"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 170.0
offset_right = 360.0
offset_bottom = 340.0
text = "Debug"
visible = false
